some more tests

--- a/coding-hometask-1.ipynb
+++ b/coding-hometask-1.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -147,6 +147,7 @@
    ],
    "source": [
     "import unittest\n",
+    "import scipy.stats as sps\n",
     "\n",
     "\n",
     "class TestBinPackingSolutions(unittest.TestCase):\n",
@@ -167,10 +168,21 @@
     "        weights = [0.3000000001, 0.95, 0.06, 0.7, 0.8]\n",
     "        self.assertEqual(solve_bp_evaluation(weights), 4)\n",
     "\n",
+    "    def test_evaluation_big(self):\n",
+    "        test_size = 11\n",
+    "        test_num = 10\n",
+    "        for test_i in range(test_num):\n",
+    "            with self.subTest(i=test_i):\n",
+    "                weights = sps.uniform.rvs(size=test_size)\n",
+    "                ans = solve_bp_evaluation(weights)\n",
+    "                self.assertTrue(solve_bp_decision(weights, ans))\n",
+    "                self.assertFalse(solve_bp_decision(weights, ans - 1))\n",
+    "\n",
     "    def test_search(self):\n",
     "        test_cases = [[0.8, 0.09, 0.4, 0.7],\n",
     "                      [1, 1, 1, 1, 0, 0, 0],\n",
     "                      [0.01, 0.8, 0.19]]\n",
+    "        \n",
     "        for subtest_i, weights in enumerate(test_cases):\n",
     "            with self.subTest(i=subtest_i):\n",
     "                optimal_bin_n = solve_bp_evaluation(weights)\n",
