prettyfying and more tests

--- a/coding-hometask-1.ipynb
+++ b/coding-hometask-1.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -74,15 +74,15 @@
     "    \n",
     "    ans = []\n",
     "    capacities = [1.0] * optimal_ans\n",
-    "    for cur_w in range(n):\n",
+    "    for (i, cur_w) in enumerate(weights):\n",
     "        for bin_i in range(n):\n",
-    "            if capacities[bin_i] >= weights[cur_w]:\n",
-    "                capacities[bin_i] -= weights[cur_w]\n",
-    "                if able_to_pack(weights[cur_w + 1:], capacities):\n",
+    "            if capacities[bin_i] >= cur_w:\n",
+    "                capacities[bin_i] -= cur_w\n",
+    "                if able_to_pack(weights[i + 1:], capacities):\n",
     "                    ans.append(bin_i + 1)\n",
     "                    break\n",
     "                else:\n",
-    "                    capacities[bin_i] += weights[cur_w]\n",
+    "                    capacities[bin_i] += cur_w\n",
     "\n",
     "    return ans"
    ]
