--- a/coding-hometask-2-1.ipynb
+++ b/coding-hometask-2-1.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -92,49 +92,27 @@
     "    L, R = random_partition(vertices)\n",
     "    cur_cut_cost = cut_cost(L, R, edges)\n",
     "    \n",
-    "    max_iterations = min(n * n, 1000)\n",
     "    while True:\n",
-    "#         print(cur_cut_cost, end=' ')\n",
     "        min_new_L = []\n",
     "        min_new_R = []\n",
-    "        min_new_cut_cost = cur_cut_cost # типа бесконечность\n",
+    "        min_new_cut_cost = cur_cut_cost\n",
     "\n",
-    "        if len(L) == len(R):\n",
-    "            for v1 in L:\n",
-    "                for v2 in R:\n",
-    "                    L.remove(v1)\n",
-    "                    R.remove(v2)\n",
-    "                    L.add(v2)\n",
-    "                    R.add(v1)\n",
-    "                    \n",
-    "                    # <=, потому что если есть разрез поменьше\n",
-    "                    # то мы в итоге до него все равно дойдем\n",
-    "                    # а если нет, то этот переход нам все равно ничего не испортит\n",
-    "                    # а взамен мы, возможно, найдем через него разрез поменьше\n",
-    "                    cur_cut_cost = cut_cost(L, R, edges)\n",
-    "                    if cur_cut_cost <= min_new_cut_cost:\n",
-    "                        min_new_L = L\n",
-    "                        min_new_R = R\n",
-    "                        min_new_cut_cost = cur_cut_cost\n",
-    "                    \n",
-    "                    L.remove(v2)\n",
-    "                    R.remove(v1)\n",
-    "                    L.add(v1)\n",
-    "                    L.add(v2)\n",
-    "        else:\n",
-    "            # будем поддерживать |L| <= |R|\n",
-    "            for v in R:\n",
-    "                R.remove(v)\n",
-    "                L.add(v)\n",
+    "        # перебираем 2 вершины, которые мы поменяем местами\n",
+    "        for v1 in L:\n",
+    "            for v2 in R:\n",
+    "                new_L = L.copy()\n",
+    "                new_R = R.copy()\n",
     "                \n",
-    "                cur_cut_cost = cut_cost(L, R, edges)\n",
+    "                new_L.remove(v1)\n",
+    "                new_R.remove(v2)\n",
+    "                new_L.add(v2)\n",
+    "                new_R.add(v1)\n",
+    "                \n",
+    "                cur_cut_cost = cut_cost(new_L, new_R, edges)\n",
     "                if cur_cut_cost < min_new_cut_cost:\n",
-    "                    min_new_L = L\n",
-    "                    min_new_R = R\n",
+    "                    min_new_L = new_L\n",
+    "                    min_new_R = new_R\n",
     "                    min_new_cut_cost = cur_cut_cost\n",
-    "                \n",
-    "                L.remove(v)\n",
-    "                R.add(v)\n",
     "        \n",
     "        if min_new_L == []:\n",
     "            return (L, R)\n",
@@ -150,7 +128,9 @@
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -171,11 +151,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Myciel3:\n",
+      "{1, 6, 7, 9, 11} \n",
+      " {2, 3, 4, 5, 8, 10} \n",
+      " cut cost =  8 \n",
+      "\n",
+      "Myciel4:\n",
+      "{1, 6, 8, 9, 13, 15, 16, 18, 20, 22, 23} \n",
+      " {2, 3, 4, 5, 7, 10, 11, 12, 14, 17, 19, 21} \n",
+      " cut cost =  28 \n",
+      "\n",
+      "Myciel5:\n",
+      "{3, 4, 6, 7, 8, 9, 10, 13, 16, 18, 21, 22, 23, 24, 26, 34, 35, 36, 37, 38, 39, 44, 45} \n",
+      " {1, 2, 5, 11, 12, 14, 15, 17, 19, 20, 25, 27, 28, 29, 30, 31, 32, 33, 40, 41, 42, 43, 46, 47} \n",
+      " cut cost =  93 \n",
+      "\n",
+      "Myciel6:\n",
+      "{2, 4, 5, 8, 9, 15, 19, 20, 23, 24, 28, 29, 31, 35, 37, 40, 42, 46, 47, 49, 52, 59, 60, 61, 62, 63, 64, 66, 67, 69, 71, 75, 76, 78, 80, 81, 82, 83, 84, 85, 86, 87, 89, 90, 91, 92, 95} \n",
+      " {1, 3, 6, 7, 10, 11, 12, 13, 14, 16, 17, 18, 21, 22, 25, 26, 27, 30, 32, 33, 34, 36, 38, 39, 41, 43, 44, 45, 48, 50, 51, 53, 54, 55, 56, 57, 58, 65, 68, 70, 72, 73, 74, 77, 79, 88, 93, 94} \n",
+      " cut cost =  295 \n",
+      "\n",
+      "Myciel7:\n",
+      "{1, 3, 6, 8, 9, 12, 16, 22, 25, 27, 30, 31, 32, 36, 38, 39, 41, 43, 45, 47, 48, 50, 53, 55, 56, 59, 60, 61, 63, 64, 69, 72, 73, 74, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 95, 96, 97, 100, 101, 102, 103, 104, 105, 106, 108, 111, 117, 118, 120, 122, 125, 127, 131, 134, 136, 142, 143, 147, 148, 150, 151, 154, 155, 158, 164, 167, 169, 170, 172, 174, 178, 180, 181, 183, 186, 187, 189, 190} \n",
+      " {2, 4, 5, 7, 10, 11, 13, 14, 15, 17, 18, 19, 20, 21, 23, 24, 26, 28, 29, 33, 34, 35, 37, 40, 42, 44, 46, 49, 51, 52, 54, 57, 58, 62, 65, 66, 67, 68, 70, 71, 75, 93, 94, 98, 99, 107, 109, 110, 112, 113, 114, 115, 116, 119, 121, 123, 124, 126, 128, 129, 130, 132, 133, 135, 137, 138, 139, 140, 141, 144, 145, 146, 149, 152, 153, 156, 157, 159, 160, 161, 162, 163, 165, 166, 168, 171, 173, 175, 176, 177, 179, 182, 184, 185, 188, 191} \n",
+      " cut cost =  932 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(3, 8):\n",
     "    print(\"Myciel{num}:\".format(num=i))\n",
@@ -191,7 +205,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
