--- a/coding-hometask-2-1.ipynb
+++ b/coding-hometask-2-1.ipynb
@@ -81,10 +81,6 @@
     "    \n",
     "    return (L, R)\n",
     "\n",
-    "# в качестве 1-окрестности я рассматриваю разрезы\n",
-    "# отличающиеся от текущего в не более чем в 2 вершинах\n",
-    "# 2 -- если всего четное число вершин\n",
-    "# 1 -- иначе\n",
     "def basic_local_search(graph: tuple) -> tuple:\n",
     "    \n",
     "    vertices, edges = graph\n",
@@ -151,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -163,34 +159,37 @@
      "output_type": "stream",
      "text": [
       "Myciel3:\n",
-      "{1, 6, 7, 9, 11} \n",
-      " {2, 3, 4, 5, 8, 10} \n",
+      "{4, 6, 9, 10, 11} \n",
+      " {1, 2, 3, 5, 7, 8} \n",
       " cut cost =  8 \n",
       "\n",
       "Myciel4:\n",
-      "{1, 6, 8, 9, 13, 15, 16, 18, 20, 22, 23} \n",
-      " {2, 3, 4, 5, 7, 10, 11, 12, 14, 17, 19, 21} \n",
+      "{2, 5, 8, 11, 14, 17, 18, 19, 20, 21, 23} \n",
+      " {1, 3, 4, 6, 7, 9, 10, 12, 13, 15, 16, 22} \n",
       " cut cost =  28 \n",
       "\n",
       "Myciel5:\n",
-      "{3, 4, 6, 7, 8, 9, 10, 13, 16, 18, 21, 22, 23, 24, 26, 34, 35, 36, 37, 38, 39, 44, 45} \n",
-      " {1, 2, 5, 11, 12, 14, 15, 17, 19, 20, 25, 27, 28, 29, 30, 31, 32, 33, 40, 41, 42, 43, 46, 47} \n",
-      " cut cost =  93 \n",
+      "{1, 4, 5, 6, 8, 9, 10, 11, 15, 17, 19, 20, 21, 25, 27, 28, 34, 36, 38, 39, 40, 43, 45} \n",
+      " {2, 3, 7, 12, 13, 14, 16, 18, 22, 23, 24, 26, 29, 30, 31, 32, 33, 35, 37, 41, 42, 44, 46, 47} \n",
+      " cut cost =  95 \n",
       "\n",
       "Myciel6:\n",
-      "{2, 4, 5, 8, 9, 15, 19, 20, 23, 24, 28, 29, 31, 35, 37, 40, 42, 46, 47, 49, 52, 59, 60, 61, 62, 63, 64, 66, 67, 69, 71, 75, 76, 78, 80, 81, 82, 83, 84, 85, 86, 87, 89, 90, 91, 92, 95} \n",
-      " {1, 3, 6, 7, 10, 11, 12, 13, 14, 16, 17, 18, 21, 22, 25, 26, 27, 30, 32, 33, 34, 36, 38, 39, 41, 43, 44, 45, 48, 50, 51, 53, 54, 55, 56, 57, 58, 65, 68, 70, 72, 73, 74, 77, 79, 88, 93, 94} \n",
-      " cut cost =  295 \n",
+      "{1, 4, 9, 11, 12, 17, 18, 19, 20, 21, 23, 24, 34, 35, 39, 40, 41, 43, 44, 47, 51, 54, 56, 58, 64, 65, 67, 68, 70, 71, 72, 74, 75, 77, 79, 81, 82, 83, 85, 86, 87, 88, 89, 90, 91, 93, 95} \n",
+      " {2, 3, 5, 6, 7, 8, 10, 13, 14, 15, 16, 22, 25, 26, 27, 28, 29, 30, 31, 32, 33, 36, 37, 38, 42, 45, 46, 48, 49, 50, 52, 53, 55, 57, 59, 60, 61, 62, 63, 66, 69, 73, 76, 78, 80, 84, 92, 94} \n",
+      " cut cost =  293 \n",
       "\n",
       "Myciel7:\n",
-      "{1, 3, 6, 8, 9, 12, 16, 22, 25, 27, 30, 31, 32, 36, 38, 39, 41, 43, 45, 47, 48, 50, 53, 55, 56, 59, 60, 61, 63, 64, 69, 72, 73, 74, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 95, 96, 97, 100, 101, 102, 103, 104, 105, 106, 108, 111, 117, 118, 120, 122, 125, 127, 131, 134, 136, 142, 143, 147, 148, 150, 151, 154, 155, 158, 164, 167, 169, 170, 172, 174, 178, 180, 181, 183, 186, 187, 189, 190} \n",
-      " {2, 4, 5, 7, 10, 11, 13, 14, 15, 17, 18, 19, 20, 21, 23, 24, 26, 28, 29, 33, 34, 35, 37, 40, 42, 44, 46, 49, 51, 52, 54, 57, 58, 62, 65, 66, 67, 68, 70, 71, 75, 93, 94, 98, 99, 107, 109, 110, 112, 113, 114, 115, 116, 119, 121, 123, 124, 126, 128, 129, 130, 132, 133, 135, 137, 138, 139, 140, 141, 144, 145, 146, 149, 152, 153, 156, 157, 159, 160, 161, 162, 163, 165, 166, 168, 171, 173, 175, 176, 177, 179, 182, 184, 185, 188, 191} \n",
-      " cut cost =  932 \n",
-      "\n"
+      "{2, 5, 6, 7, 8, 10, 13, 23, 25, 28, 29, 30, 31, 33, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 47, 50, 53, 55, 60, 61, 62, 64, 66, 67, 69, 71, 72, 73, 74, 76, 77, 78, 79, 80, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 95, 96, 97, 98, 99, 100, 101, 103, 106, 108, 109, 110, 117, 118, 131, 140, 142, 143, 145, 146, 150, 153, 156, 157, 161, 164, 165, 168, 173, 177, 178, 179, 180, 181, 182, 184, 185, 187, 189, 190} \n",
+      " {1, 3, 4, 9, 11, 12, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24, 26, 27, 32, 34, 35, 46, 48, 49, 51, 52, 54, 56, 57, 58, 59, 63, 65, 68, 70, 75, 81, 93, 94, 102, 104, 105, 107, 111, 112, 113, 114, 115, 116, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 132, 133, 134, 135, 136, 137, 138, 139, 141, 144, 147, 148, 149, 151, 152, 154, 155, 158, 159, 160, 162, 163, 166, 167, 169, 170, 171, 172, 174, 175, 176, 183, 186, 188, 191} \n",
+      " cut cost =  925 \n",
+      "\n",
+      "CPU times: user 2min 3s, sys: 80 ms, total: 2min 3s\n",
+      "Wall time: 2min 3s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "for i in range(3, 8):\n",
     "    print(\"Myciel{num}:\".format(num=i))\n",
     "    \n",
