nearest neighbour now uses numpy arrays

--- a/coding-hometask-3-1.ipynb
+++ b/coding-hometask-3-1.ipynb
@@ -36,20 +36,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "import time\n",
     "import os\n",
-    "import math"
+    "import math\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -88,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -99,24 +103,25 @@
     "# input -- [(x1, y1), (x2, y2)]\n",
     "# output -- nearest neighbour algo vertices sequence\n",
     "def solve_tsp_nearest_neighbour(instance: list):\n",
-    "    not_visited = instance.copy()\n",
-    "    answer = []\n",
+    "    n = len(instance)\n",
+    "    def w(i, j):\n",
+    "        return euclidean_distance(instance[i], instance[j])\n",
     "    \n",
-    "    cur_vertex = not_visited.pop(-1)\n",
-    "    answer.append(instance.index(cur_vertex))\n",
+    "    not_visited = np.array(range(1, n))\n",
+    "    answer = np.array([0])\n",
     "    \n",
-    "    for iteration_num in range(len(instance) - 1):\n",
-    "        nearest_v = min(not_visited, key=lambda v: euclidean_distance(v, cur_vertex))\n",
-    "        answer.append(instance.index(nearest_v))\n",
-    "        not_visited.remove(nearest_v)\n",
-    "        cur_vertex = nearest_v\n",
+    "    for i in range(1, n):\n",
+    "        distances = [w(answer[-1], not_visited[j]) for j in range(n - i)]\n",
+    "        min_i = np.argmin(distances)\n",
+    "        answer = np.insert(answer, i, not_visited[min_i])\n",
+    "        not_visited = np.delete(not_visited, min_i)\n",
     "    \n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -169,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -178,7 +183,7 @@
    "outputs": [],
    "source": [
     "def run_all():\n",
-    "    instance_filenames = ['d198.tsp', 'd493.tsp', 'd657.tsp', 'd2103.tsp', 'pr107.tsp', 'pr152.tsp', 'pr439.tsp']\n",
+    "    instance_filenames = ['d198.tsp']#, 'd493.tsp', 'd657.tsp', 'd2103.tsp', 'pr107.tsp', 'pr152.tsp', 'pr439.tsp']\n",
     "    for filename in instance_filenames:\n",
     "        path = 'tsp-instances/{file}'.format(file=filename)\n",
     "        if not os.path.exists(path):\n",
@@ -193,6 +198,27 @@
     "        quality_ni = calculate_tour_length(instance, solve_tsp_nearest_insertion(instance))\n",
     "        time_ni = time.monotonic()-time_start\n",
     "        print(' done \\n NN: {:.2} seconds, Tour length {} \\n NI: {:.2} seconds, Tour length {}'.format(time_nn, int(quality_nn), time_ni, int(quality_ni)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solving instance d198.tsp… done \n",
+      " NN: 0.053 seconds, Tour length 18620 \n",
+      " NI: 2.8 seconds, Tour length 17631\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_all()"
    ]
   },
   {
@@ -245,14 +271,16 @@
    },
    "source": [
     "## Выводы\n",
-    "Как и было доказано на лекции, алгоритм Nearest Insertion дает выгоднее ответ, что можно видеть на тестовых кейсах выше. Правда, плата за это -- асимптотическая сложность => увеличение времени работы(Сравните: час на кейсе с 2103 вершинами против 2.7 секунд)"
+    "Как видно по результатам запусков, нельзя заранее сказать, какой алгоритм сработает лучше, но при том"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
