NI now works with numpy arrays -> 60 times speed boost

--- a/coding-hometask-3-1.ipynb
+++ b/coding-hometask-3-1.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -48,7 +48,10 @@
     "import os\n",
     "import math\n",
     "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "def cool_argmin(array):\n",
+    "    return np.unravel_index(np.argmin(array), array.shape)"
    ]
   },
   {
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -111,7 +114,7 @@
     "    answer = np.array([0])\n",
     "    \n",
     "    for i in range(1, n):\n",
-    "        distances = [w(answer[-1], not_visited[j]) for j in range(n - i)]\n",
+    "        distances = np.array([w(answer[-1], not_visited[j]) for j in range(n - i)])\n",
     "        min_i = np.argmin(distances)\n",
     "        answer = np.insert(answer, i, not_visited[min_i])\n",
     "        not_visited = np.delete(not_visited, min_i)\n",
@@ -121,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -130,51 +133,45 @@
    "outputs": [],
    "source": [
     "def solve_tsp_nearest_insertion(instance):\n",
+    "    instance = np.array([list(pt) for pt in instance])\n",
+    "    \n",
     "    n = len(instance)\n",
     "    if n == 1:\n",
     "        return [0]\n",
     "    \n",
-    "    # cycle format: [v1, v2, ...., v_n, v1]\n",
-    "    # returns (nearest vertex index, insertion index)\n",
-    "    def closest_to_cycle(vertex_indices: list, cycle: list):\n",
-    "        min_dist = math.inf\n",
-    "        closest_i = -1\n",
-    "        insertion_i = -1\n",
+    "    def w(i, j):\n",
+    "        return euclidean_distance(instance[i], instance[j])\n",
+    "    \n",
+    "    cycle = np.array([0])\n",
+    "    not_visited = np.array(range(1, n))\n",
+    "    \n",
+    "    for cycle_len in range(1, n):\n",
+    "        in_cycle = instance[cycle].T\n",
+    "        not_in_cycle = instance[not_visited].T\n",
     "        \n",
-    "        for edge_i, v1_i in enumerate(cycle[:-1]):\n",
-    "            v2_i = cycle[edge_i + 1] \n",
-    "            edge_w = euclidean_distance(instance[v1_i], instance[v2_i])\n",
-    "            \n",
-    "            for vertex_i in vertex_indices:\n",
-    "                cur_dist = euclidean_distance(instance[v1_i], instance[vertex_i]) + \\\n",
-    "                           euclidean_distance(instance[v2_i], instance[vertex_i]) - edge_w\n",
-    "                \n",
-    "                if cur_dist < min_dist:\n",
-    "                    min_dist = cur_dist\n",
-    "                    closest_i = vertex_i\n",
-    "                    insertion_i = edge_i\n",
+    "        A1 = np.tile(in_cycle, n - cycle_len).reshape((2, n - cycle_len, cycle_len))\n",
+    "        A1 = np.array([x.T for x in A1])\n",
     "        \n",
-    "        return closest_i, insertion_i\n",
-    "\n",
-    "    v0_i = 0\n",
-    "    not_visited = list(range(1, n))\n",
-    "    v1_i = min(not_visited, key=lambda i: euclidean_distance(instance[i], instance[v0_i]))\n",
-    "    not_visited.remove(v1_i)\n",
+    "        B1 = np.tile(not_in_cycle, cycle_len).reshape((2, cycle_len, n - cycle_len))\n",
+    "        D = np.sqrt((A1[0] - B1[0]) ** 2 + (A1[1] - B1[1]) ** 2)\n",
+    "        dist_v_u1_v_u2 = D + np.roll(D, 1, axis=0)\n",
+    "        neigh_dist_in_cycle = np.array([w(cycle[i - 1], cycle[i]) for i in range(cycle_len)])\n",
+    "        M = dist_v_u1_v_u2.T - neigh_dist_in_cycle\n",
+    "        \n",
+    "        optimal = np.argmin(M)\n",
+    "        cycle_edge_i, i_not_in_cycle = optimal % cycle_len, optimal // cycle_len\n",
+    "        \n",
+    "        cycle = np.insert(cycle, cycle_edge_i, not_visited[i_not_in_cycle])\n",
+    "        not_visited = np.delete(not_visited, i_not_in_cycle)\n",
     "    \n",
-    "    cur_cycle = [v0_i, v1_i, v0_i]\n",
-    "    \n",
-    "    for iteration_num in range(len(instance) - 2):\n",
-    "        nearest_vertex_i, insertion_i = closest_to_cycle(not_visited, cur_cycle)\n",
-    "        cur_cycle = cur_cycle[:insertion_i + 1] + [nearest_vertex_i] + cur_cycle[insertion_i + 1:]\n",
-    "        not_visited.remove(nearest_vertex_i)\n",
-    "    \n",
-    "    assert(len(cur_cycle) == len(instance) + 1)\n",
-    "    return cur_cycle[:-1]"
+    "    assert(len(cycle) == n)\n",
+    "    return cycle\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -183,14 +180,14 @@
    "outputs": [],
    "source": [
     "def run_all():\n",
-    "    instance_filenames = ['d198.tsp']#, 'd493.tsp', 'd657.tsp', 'd2103.tsp', 'pr107.tsp', 'pr152.tsp', 'pr439.tsp']\n",
+    "    instance_filenames = ['d198.tsp', 'd493.tsp', 'd657.tsp', 'd2103.tsp', 'pr107.tsp', 'pr152.tsp', 'pr439.tsp']\n",
     "    for filename in instance_filenames:\n",
     "        path = 'tsp-instances/{file}'.format(file=filename)\n",
     "        if not os.path.exists(path):\n",
     "            print('File not found: “{}”. Skipping this instance.'.format(path))\n",
     "            continue\n",
     "        instance = read_tsp_instance(path)\n",
-    "        print('Solving instance {}…'.format(filename), end='')\n",
+    "        print('Solving instance {}…\\n'.format(filename), end='')\n",
     "        time_start = time.monotonic()\n",
     "        quality_nn = calculate_tour_length(instance, solve_tsp_nearest_neighbour(instance))\n",
     "        time_nn = time.monotonic()-time_start\n",
@@ -202,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -211,50 +208,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solving instance d198.tsp… done \n",
-      " NN: 0.053 seconds, Tour length 18620 \n",
-      " NI: 2.8 seconds, Tour length 17631\n"
-     ]
-    }
-   ],
-   "source": [
-    "run_all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Solving instance d198.tsp… done \n",
-      " NN: 0.042 seconds, Tour length 18830 \n",
-      " NI: 2.8 seconds, Tour length 17631\n",
-      "Solving instance d493.tsp… done \n",
-      " NN: 0.14 seconds, Tour length 44160 \n",
-      " NI: 4.2e+01 seconds, Tour length 39982\n",
-      "Solving instance d657.tsp… done \n",
-      " NN: 0.25 seconds, Tour length 62860 \n",
-      " NI: 1.1e+02 seconds, Tour length 57906\n",
-      "Solving instance d2103.tsp… done \n",
-      " NN: 2.7 seconds, Tour length 92247 \n",
-      " NI: 3.6e+03 seconds, Tour length 87665\n",
-      "Solving instance pr107.tsp… done \n",
-      " NN: 0.0073 seconds, Tour length 47464 \n",
-      " NI: 0.48 seconds, Tour length 52587\n",
-      "Solving instance pr152.tsp… done \n",
-      " NN: 0.015 seconds, Tour length 85314 \n",
-      " NI: 1.3 seconds, Tour length 87848\n",
-      "Solving instance pr439.tsp… done \n",
-      " NN: 0.12 seconds, Tour length 131702 \n",
-      " NI: 3.2e+01 seconds, Tour length 130254\n"
+      "Solving instance d198.tsp…\n",
+      " done \n",
+      " NN: 0.058 seconds, Tour length 18620 \n",
+      " NI: 0.085 seconds, Tour length 17631\n",
+      "Solving instance d493.tsp…\n",
+      " done \n",
+      " NN: 0.19 seconds, Tour length 43646 \n",
+      " NI: 0.75 seconds, Tour length 39982\n",
+      "Solving instance d657.tsp…\n",
+      " done \n",
+      " NN: 0.34 seconds, Tour length 62176 \n",
+      " NI: 1.7 seconds, Tour length 57906\n",
+      "Solving instance d2103.tsp…\n",
+      " done \n",
+      " NN: 3.0 seconds, Tour length 87468 \n",
+      " NI: 6.9e+01 seconds, Tour length 87570\n",
+      "Solving instance pr107.tsp…\n",
+      " done \n",
+      " NN: 0.012 seconds, Tour length 46678 \n",
+      " NI: 0.028 seconds, Tour length 52587\n",
+      "Solving instance pr152.tsp…\n",
+      " done \n",
+      " NN: 0.021 seconds, Tour length 85702 \n",
+      " NI: 0.051 seconds, Tour length 88530\n",
+      "Solving instance pr439.tsp…\n",
+      " done \n",
+      " NN: 0.15 seconds, Tour length 131282 \n",
+      " NI: 0.51 seconds, Tour length 130067\n"
      ]
     }
    ],
@@ -271,19 +252,8 @@
    },
    "source": [
     "## Выводы\n",
-    "Как видно по результатам запусков, нельзя заранее сказать, какой алгоритм сработает лучше, но при том"
+    "Как видно по результатам запусков, нельзя заранее сказать, какой алгоритм сработает лучше, однако в большинстве случаев Nearest Insertion работает лучше, но цена тому -- более сложная асимптотика -- $O(n^3)$, вместо $O(n^2)$ у Nearest Neightbour"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
