--- a/coding-hometask-2-2.ipynb
+++ b/coding-hometask-2-2.ipynb
@@ -38,7 +38,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -182,7 +184,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -193,7 +197,9 @@
    "cell_type": "code",
    "execution_count": 128,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -254,9 +260,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solving instance t60k.graph…"
+     ]
+    }
+   ],
    "source": [
     "filename = 't60k.graph'\n",
     "max_depth = 2\n",
@@ -275,7 +291,9 @@
    "cell_type": "code",
    "execution_count": 130,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -320,8 +338,14 @@
     "editable": true
    },
    "source": [
-    "## Выводы\n",
-    "(Здесь опишите свои наблюдения и подобранные параметры для каждогр из четырёх входных графов.)"
+    "## Выводы\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Все очень плохо, не хватило времени 6 часов до дедлайна, чтобы прогнать разные варианты максимальных глубин, чтобы посмотреть, меняется ли что-либо(да и не все кейсы успел прогнать)."
    ]
   }
  ],
