--- a/coding-hometask-2-2.ipynb
+++ b/coding-hometask-2-2.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Задание по курсу «Дискретная оптимизация», МФТИ, весна 2017"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Задача 2-2. Эвристика Кернигана—Лина\n",
     "\n",
@@ -30,9 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -41,9 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -65,9 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -132,7 +144,6 @@
     "        new_cut_cost = cut_cost(best_local_L, best_local_R, edges)\n",
     "        if new_cut_cost >= best_cut_cost:\n",
     "            depth += 1\n",
-    "            print(\"Local maximum:\", get_quality(graph, best_L))\n",
     "        else:\n",
     "            best_cut_cost = new_cut_cost\n",
     "            depth = 0\n",
@@ -145,9 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -155,7 +168,7 @@
     "\n",
     "def run_all():\n",
     "    filenames = ['add20.graph', 'cti.graph', 't60k.graph']#, 'm14b.graph']\n",
-    "    for max_depth in range(5):\n",
+    "    for max_depth in range(7):\n",
     "        print('\\n=============Depth {}============='.format(max_depth))\n",
     "        for filename in filenames:\n",
     "            instance = read_instance(filename)\n",
@@ -170,8 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -182,130 +198,72 @@
       "\n",
       "=============Depth 0=============\n",
       "Solving instance add20.graph\n",
-      "Done in 0.011 seconds with quality 11070\n",
+      "Done in 0.018 seconds with quality 11070\n",
       "Solving instance cti.graph\n",
-      "Done in 0.081 seconds with quality 94052\n",
+      "Done in 0.12 seconds with quality 94052\n",
       "Solving instance t60k.graph\n",
-      "Done in 0.19 seconds with quality 178236\n",
+      "Done in 0.28 seconds with quality 178236\n",
       "\n",
       "=============Depth 1=============\n",
       "Solving instance add20.graph\n",
-      "Local maximum: 12462\n",
-      "Done in 1.3e+02 seconds with quality 12462\n",
+      "Done in 1.2e+02 seconds with quality 12462\n",
       "Solving instance cti.graph\n",
-      "Local maximum: 94080\n",
-      "Done in 2e+02 seconds with quality 94080\n",
+      "Done in 2.4e+02 seconds with quality 94080\n",
       "Solving instance t60k.graph\n",
-      "Local maximum: 178248\n",
-      "Done in 1.7e+03 seconds with quality 178248\n",
+      "Done in 1.8e+03 seconds with quality 178248\n",
       "\n",
       "=============Depth 2=============\n",
       "Solving instance add20.graph\n",
-      "Local maximum: 12462\n",
-      "Local maximum: 12528\n",
-      "Local maximum: 12554\n",
-      "Local maximum: 12580\n",
-      "Local maximum: 12584\n",
-      "Local maximum: 12588\n",
-      "Local maximum: 12622\n",
-      "Local maximum: 12626\n",
-      "Local maximum: 12630\n",
-      "Local maximum: 12672\n",
-      "Local maximum: 12710\n",
-      "Local maximum: 12714\n",
-      "Local maximum: 12718\n",
-      "Local maximum: 12722\n",
-      "Local maximum: 12726\n",
-      "Local maximum: 12730\n",
-      "Local maximum: 12734\n",
-      "Local maximum: 12762\n",
-      "Local maximum: 12788\n",
-      "Local maximum: 12790\n",
-      "Local maximum: 12790\n",
-      "Done in 1.9e+02 seconds with quality 12790\n",
+      "Done in 2.1e+02 seconds with quality 12790\n",
       "Solving instance cti.graph\n",
-      "Local maximum: 94080\n",
-      "Local maximum: 94080\n",
-      "Done in 2.2e+02 seconds with quality 94080\n",
+      "Done in 2.7e+02 seconds with quality 94080\n",
       "Solving instance t60k.graph\n",
-      "Local maximum: 178248\n",
-      "Local maximum: 178248\n",
-      "Done in 2.1e+03 seconds with quality 178248\n",
+      "Done in 2.3e+03 seconds with quality 178248\n",
       "\n",
       "=============Depth 3=============\n",
       "Solving instance add20.graph\n",
-      "Local maximum: 12462\n",
-      "Local maximum: 12528\n",
-      "Local maximum: 12554\n",
-      "Local maximum: 12580\n",
-      "Local maximum: 12584\n",
-      "Local maximum: 12588\n",
-      "Local maximum: 12622\n",
-      "Local maximum: 12626\n",
-      "Local maximum: 12630\n",
-      "Local maximum: 12672\n",
-      "Local maximum: 12710\n",
-      "Local maximum: 12714\n",
-      "Local maximum: 12718\n",
-      "Local maximum: 12722\n",
-      "Local maximum: 12726\n",
-      "Local maximum: 12730\n",
-      "Local maximum: 12734\n",
-      "Local maximum: 12762\n",
-      "Local maximum: 12788\n",
-      "Local maximum: 12790\n",
-      "Local maximum: 12790\n",
-      "Local maximum: 12790\n",
-      "Done in 1.9e+02 seconds with quality 12790\n",
+      "Done in 2.1e+02 seconds with quality 12790\n",
       "Solving instance cti.graph\n",
-      "Local maximum: 94080\n",
-      "Local maximum: 94080\n",
-      "Local maximum: 94080\n",
-      "Done in 2.5e+02 seconds with quality 94080\n",
+      "Done in 3.1e+02 seconds with quality 94080\n",
       "Solving instance t60k.graph\n",
-      "Local maximum: 178248\n",
-      "Local maximum: 178248\n",
-      "Local maximum: 178248\n",
-      "Done in 2.5e+03 seconds with quality 178248\n",
+      "Done in 2.8e+03 seconds with quality 178248\n",
       "\n",
       "=============Depth 4=============\n",
       "Solving instance add20.graph\n",
-      "Local maximum: 12462\n",
-      "Local maximum: 12528\n",
-      "Local maximum: 12554\n",
-      "Local maximum: 12580\n",
-      "Local maximum: 12584\n",
-      "Local maximum: 12588\n",
-      "Local maximum: 12622\n",
-      "Local maximum: 12626\n",
-      "Local maximum: 12630\n",
-      "Local maximum: 12672\n",
-      "Local maximum: 12710\n",
-      "Local maximum: 12714\n",
-      "Local maximum: 12718\n",
-      "Local maximum: 12722\n",
-      "Local maximum: 12726\n",
-      "Local maximum: 12730\n",
-      "Local maximum: 12734\n",
-      "Local maximum: 12762\n",
-      "Local maximum: 12788\n",
-      "Local maximum: 12790\n",
-      "Local maximum: 12790\n",
-      "Local maximum: 12790\n",
-      "Local maximum: 12790\n",
-      "Done in 1.9e+02 seconds with quality 12790\n",
+      "Done in 2.3e+02 seconds with quality 12790\n",
       "Solving instance cti.graph\n",
-      "Local maximum: 94080\n",
-      "Local maximum: 94080\n",
-      "Local maximum: 94080\n",
-      "Local maximum: 94080\n",
-      "Done in 2.8e+02 seconds with quality 94080\n",
+      "Done in 3.6e+02 seconds with quality 94080\n",
       "Solving instance t60k.graph\n",
-      "Local maximum: 178248\n",
-      "Local maximum: 178248\n",
-      "Local maximum: 178248\n",
-      "Local maximum: 178248\n",
-      "Done in 3e+03 seconds with quality 178248\n"
+      "Done in 3.3e+03 seconds with quality 178248\n",
+      "\n",
+      "=============Depth 5=============\n",
+      "Solving instance add20.graph\n",
+      "Done in 2.1e+02 seconds with quality 12790\n",
+      "Solving instance cti.graph\n",
+      "Done in 3.8e+02 seconds with quality 94080\n",
+      "Solving instance t60k.graph\n",
+      "Done in 3.7e+03 seconds with quality 178248\n",
+      "\n",
+      "=============Depth 6=============\n",
+      "Solving instance add20.graph\n",
+      "Done in 2e+02 seconds with quality 12790\n",
+      "Solving instance cti.graph\n",
+      "Done in 4.1e+02 seconds with quality 94080\n",
+      "Solving instance t60k.graph\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-a5db3ff65058>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrun_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-7-8de8dfbc0ae8>\u001b[0m in \u001b[0;36mrun_all\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mtime_start\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmonotonic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m             \u001b[0mquality\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_quality\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvariable_depth_local_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0mtime_elapsed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmonotonic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mtime_start\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-d21954e00d74>\u001b[0m in \u001b[0;36mvariable_depth_local_search\u001b[0;34m(graph, max_depth)\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0mbest_L\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mL\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mdepth\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m         \u001b[0mbest_local_L\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbest_local_R\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbest_local\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mL\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m         \u001b[0mnew_cut_cost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcut_cost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbest_local_L\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbest_local_R\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0medges\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnew_cut_cost\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0mbest_cut_cost\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-d21954e00d74>\u001b[0m in \u001b[0;36mbest_local\u001b[0;34m(graph, L, R)\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mv1\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mL\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mv2\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m             \u001b[0mis_edge\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mv1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mv2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0mcur_exchange_cost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexchange_cost\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mexchange_cost\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mv2\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mis_edge\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -315,14 +273,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Выводы\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Как мы видим, увеличение глубины выше 2 уже не приводит к сильному улучшению\n",
     "(на тесте m14b я запустил на всю ночь, но оно не успело отработать, так что я решил, что это плохая идея), так что глубину 2 предлагаю считать оптимальной."
