Интересное наблюдение: моя реализация на каждом тесте находит оптимальный TSP. На всякий случай сделаю коммит с этим наблюдением

--- a/coding-hometask-3-2.ipynb
+++ b/coding-hometask-3-2.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -112,10 +112,10 @@
     "    \n",
     "    y = {v: 0 for v in g.nodes()}\n",
     "    best_held_carp_bound = -float('inf')\n",
-    "    t_lowest = 0.001\n",
+    "    t_lowest = 0.0001\n",
     "    alpha = 2\n",
-    "    beta = 0.5\n",
-    "    iterations_factor = 0.15\n",
+    "    beta = 2 / 3\n",
+    "    iterations_factor = 0.015\n",
     "    \n",
     "    max_changes = 100\n",
     "    num_iterations = int(g.number_of_nodes() * iterations_factor)\n",
@@ -152,6 +152,7 @@
     "            \n",
     "            best_held_carp_bound = max(best_held_carp_bound, held_carp_bound)\n",
     "            if optimal:\n",
+    "                print (\"ОПТИМАЛЬНЕНЬКО\")\n",
     "                return best_held_carp_bound + 2 * sum((y[v] for v in g.nodes()))\n",
     "            \n",
     "            t_cur = alpha*(U-held_carp_bound) / sum([(2-rest_mst.degree(v))**2 for v in rest_mst.nodes()])\n",
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -210,19 +211,26 @@
      "output_type": "stream",
      "text": [
       "Instance d198.tsp…\n",
-      " done in 0.33 seconds with lower bound 11831\n",
+      "ОПТИМАЛЬНЕНЬКО\n",
+      " done in 0.36 seconds with lower bound 11831\n",
       "Instance d493.tsp…\n",
-      " done in 1.9 seconds with lower bound 29406\n",
+      "ОПТИМАЛЬНЕНЬКО\n",
+      " done in 2.0 seconds with lower bound 29406\n",
       "Instance d657.tsp…\n",
+      "ОПТИМАЛЬНЕНЬКО\n",
       " done in 3.7 seconds with lower bound 42589\n",
       "Instance d2103.tsp…\n",
-      " done in 2.8e+01 seconds with lower bound 76351\n",
+      "ОПТИМАЛЬНЕНЬКО\n",
+      " done in 2.4e+01 seconds with lower bound 76351\n",
       "Instance pr107.tsp…\n",
-      " done in 0.16 seconds with lower bound 35090\n",
+      "ОПТИМАЛЬНЕНЬКО\n",
+      " done in 0.076 seconds with lower bound 35090\n",
       "Instance pr152.tsp…\n",
-      " done in 0.2 seconds with lower bound 59528\n",
+      "ОПТИМАЛЬНЕНЬКО\n",
+      " done in 0.15 seconds with lower bound 59528\n",
       "Instance pr439.tsp…\n",
-      " done in 1.6 seconds with lower bound 92429\n"
+      "ОПТИМАЛЬНЕНЬКО\n",
+      " done in 1.4 seconds with lower bound 92429\n"
      ]
     }
    ],
