fixed indexing issues in function to be minimized

--- a/coding-hometask-4-1.ipynb
+++ b/coding-hometask-4-1.ipynb
@@ -19,9 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -84,8 +86,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "282.0\n",
-      "1 ⟶ 14 ⟶ 3 ⟶ 10 ⟶ 6 ⟶ 8 ⟶ 4 ⟶ 13 ⟶ 15 ⟶ 11 ⟶ 9 ⟶ 7 ⟶ 5 ⟶ 12 ⟶ 2\n"
+      "291.0\n",
+      "1 ⟶ 13 ⟶ 2 ⟶ 15 ⟶ 9 ⟶ 5 ⟶ 7 ⟶ 3 ⟶ 12 ⟶ 14 ⟶ 10 ⟶ 8 ⟶ 6 ⟶ 4 ⟶ 11\n"
      ]
     }
    ],
@@ -110,7 +112,7 @@
     "    # Function to minimize\n",
     "    flatten = lambda l: list(itertools.chain.from_iterable(l))    \n",
     "    problem.objective = pulp.LpAffineExpression(flatten(\n",
-    "                                [[(x[i][j], distance_function(i, j)) \n",
+    "                                [[(x[i][j], distance_function(i + 1, j + 1)) \n",
     "                                  for j in range(n) if i != j]\n",
     "                                     for i in range(n)]))\n",
     "    \n",
@@ -210,7 +212,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
